--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=jpa
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/CatCaffe
+spring.datasource.username=postgres
+spring.datasource.password=senha123
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
